added the -massembler=... option for specifying a different assembler